--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="./site-assets/css/A-animation.css" />
         <link rel="stylesheet" href="./site-assets/css/A-main.css" />
         <link rel="stylesheet" href="./site-assets/css/A-parts.css" />
+        
+        <link rel="stylesheet" href="../../../site-assets/css/all.css" />
         <!-- JS -->
         <script src="./site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -94,15 +96,15 @@
                 <div class="card-group animeSreddtUpfadeIn">
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="#">
+                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
                                 <h3 glot-model="Popular+Tools">
                                     Popular Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" style="color: var(--invalid-text);" glot-model="Data+does+not+exist.">
-                                        Data does not exist.
+                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
+                                        webmanifest
                                     </h3>
                                 </a>
                             </div>
@@ -221,15 +223,15 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="#">
+                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
                                 <h3 glot-model="Tools">
                                     Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" style="color: var(--invalid-text);" glot-model="Data+does+not+exist.">
-                                        Data does not exist.
+                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
+                                        webmanifest
                                     </h3>
                                 </a>
                             </div>
